--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.scss">
     <title>
-        
+
     </title>
 </head>
+
 <body>
-    
+
     <ul class="container text-center">
-        <li>item 1</li>
-        <li>item 2</li>
-        <li>item 3</li>
-        <li>item 4</li>
+        <li><img src="" id="logo" alt=""></li>
+        <li>
+            <ul>
+                <li>Hohe</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
+        </li>
+        <li>Let`s talk</li>
+
     </ul>
 
 </body>
+
 </html>
