add link favocon.ico

--- a/src/index.html
+++ b/src/index.html
@@ -6,26 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.scss">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>
 
     </title>
 </head>
 
 <body>
+    <div class="container ">
+        <ul class="row">
+            <li class="col"><img src="" id="logo" alt=""></li>
+            <li class="col">
+                <ul class="row">
+                    <li class="col">Hohe</li>
+                    <li class="col">About</li>
+                    <li class="col">Contact</li>
+                </ul>
+            </li>
+            <li class="col">Let`s talk</li>
 
-    <ul class="container text-center">
-        <li><img src="" id="logo" alt=""></li>
-        <li>
-            <ul>
-                <li>Hohe</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
-        </li>
-        <li>Let`s talk</li>
-
-    </ul>
-
+        </ul>
+    </div>
+    
 </body>
 
 </html>
