--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.scss">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/mockup/research_microscope_science_laboratory_lab_icon_233167.ico"
+        type="image/x-icon">
     <title>
 
     </title>
@@ -18,16 +19,41 @@
             <li class="col"><img src="" id="logo" alt=""></li>
             <li class="col">
                 <ul class="row">
-                    <li class="col">Hohe</li>
-                    <li class="col">About</li>
-                    <li class="col">Contact</li>
+                    <li class="col "><a href="#" class="list-group-item-action">Hohe</a></li>
+                    <li class="col "><a href="#" class="list-group-item-action">About</a></li>
+                    <li class="col "><a href="#" class="list-group-item-action">Contact</a></li>
+
                 </ul>
             </li>
-            <li class="col">Let`s talk</li>
+            <li class="col text-end  ">
+                <button type="button" class="btn btn-outline-dark">Let`s talk</button>
+            </li>
 
         </ul>
+        <div class="row">
+            <div class="col">
+                <div class="col">
+                    <div class="col fs-1 text-uppercase">HI, I`M TAYLER </div>
+                    <div class="col fs-1 text-uppercase">A CREATIVE <img src="" id="foto_vector" alt="foto_vector">DESIGNER</div>
+                    <div class="col fs-1 text-uppercase ">Based in london</div>
+                    <div class="col fs-5 text-uppercase">DESIGNER <img src="" id="foto_vector1" alt="foto_vector"> DEVELOPMENT <img
+                            src="" id="foto_vector2" alt="foto_vector"> Webflow</div>
+                    <div class="col">
+                        <div class="row">
+                            <div class="col button1"><button type="button" class="btn btn-dark">Let`s talk</button></div>
+                            <div class="col button1"><button type="button" class="btn btn-outline-dark">Let`s talk</button></div>
+                            <div class="col"></div>
+                            <div class="col"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col"><img src="" id="foto_4" alt="foto_4"></div>
+        </div>
+
+
     </div>
-    
+
 </body>
 
 </html>
